--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -355,12 +355,15 @@ h3.changelog {
 .pio-docs-sidebar {
   top: 130px !important;
   position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   margin-top: -25px;
 
 }
 .pio-docs-sidebar #toc h4 {
   margin-top: 35px;
-  font-family: Avenir-Light;
   font-size: 20px;
 }
 .share-buttons {
@@ -1811,45 +1814,44 @@ color: #222222;
   display: block;
   padding: 8px 20px 8px;
   font-size: 13px;
-  line-height: 18px;
+  line-height: 1.6;
   font-weight: 500;
   padding-left: 18px;
   color: #44525E;
   text-decoration: none;
-
 }
-.pio-docs-sidebar .nav > li > a:focus,
-.pio-docs-sidebar .nav > li > a:active,
 .pio-docs-sidebar .nav > li > a:hover {
-  padding-left: 18px;
-  color: #44525E;
-  text-decoration: none;
-  border-right: 4px solid #DDE5E7;
-  background-color: transparent;
-
+  background-color: #e6e6e6;
+  border-right: 5px solid #909090;
 }
-
 .pio-docs-sidebar .nav > .active > a,
 .pio-docs-sidebar .nav > .active:hover > a,
 .pio-docs-sidebar .nav > .active:focus > a {
   padding-left: 18px;
-  color: #44525E;
-  background-color: #EEF2F3;
-  border-right: 4px solid #DDE5E7;
-}
+  color: #0093c9;
+  background-color: #f5f5f5!important;
+  border-right: 5px solid #0093c9;
+  font-weight: 600;
+  cursor: default !important;
+  }
 
 /* Nav: second level (shown on .active) */
 .pio-docs-sidebar .nav .nav {
   display: none; /* Hide by default, but at >768px, show it */
-  padding-bottom: 10px;
 
+}
+.pio-docs-sidebar .nav .nav > .active > a:hover, .pio-docs-sidebar .nav .nav > .active > a {
+
+  font-weight:600!important;
+}
+li.tocify-item {
+  padding: 2px;
 }
 .pio-docs-sidebar .nav .nav > li > a {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 30px;
   font-size: 12px;
-  font-weight: normal;
 }
 .pio-docs-sidebar .nav .nav > li > a:focus {
   border-right: 4px solid #DDE5E7;
@@ -1892,6 +1894,7 @@ color: #222222;
 }
 
 @media (min-width: 995px) {
+
   .back-to-top,
   .pio-docs-theme-toggle {
     display: block;
@@ -3454,11 +3457,18 @@ display: block;
   list-style-type:none;
 
 }
+.manual-guide-toc-well {
+    display: flex;
+}
+
 .manual-guide-toc a {
-  background: #fff;
-  color: #44525E;
+  color: #45454d;
+  font-weight: normal;
+  line-height: 1.6;
   text-decoration: none;
-  list-style-type: none;
+  padding:10px 10px 10px 40px;
+  margin-right: -1px;
+  font-size: 16px;
 
 
 }
@@ -3472,55 +3482,49 @@ display: block;
 }
 div.col-md-3.manual-guide-toc {
   position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   top: 130px;
-  margin-bottom: 90px;
+  background: #f5f5f5;
+  border-right: 1px solid #ccc;
+  padding-left: 0px;
+  padding-right: 0px;
+  color: #1e1e2b;
+  max-height: 100vh;
 }
 .invisible-manual-toc {
   background: #fff !important;
   height:10px;
 
 }
-.manual-guide-toc > li > a:hover {
-  color: #44525E;
-  text-decoration: none;
-  border-right: 4px solid #DDE5E7;
-  padding:10px 10px 10px 40px;
-
+.manual-guide-toc ul > li {
+  padding: 2px;
 }
-.manual-guide-toc .active-trail > li > a:hover {
-  background-color: #EEF2F3 !important;
-
+ul.manual-guide-toc > li > a:hover {
+  background-color: #ddd;
+  border-left: 5px solid #909090;
+  margin-left: 15px;
+  padding: 10px 20px;
+  margin-right: -18px;
 }
-.manual-guide-toc .active-trail {
-  font-weight:bold;
-  background-color: #EEF2F3;
-  color: #44525E;
-  border-right: 4px solid #DDE5E7;
-  padding:10px 10px 10px 40px;
-
-
-}
-.manual-guide-toc > li > a:hover {
-  color: #44525E;
-  text-decoration: none;
-  border-right: 4px solid #DDE5E7;
-  padding:10px 10px 10px 40px;
-
-}
-.manual-guide-toc .active-trail > li > a:hover {
-  background-color: #EEF2F3 !important;
-
+div.manual-guide-toc.active-trail li > a:hover {
+  cursor: default !important;;
+  background-color: #fff!important;
 }
 .manual-guide-toc .active-trail {
-  font-weight:bold;
-  background-color: #EEF2F3;
-  color: #44525E;
-  border-right: 4px solid #DDE5E7;
-  padding:10px 10px 10px 40px;
-
-
+  font-weight: bold;
+  color: #0093c9;
+  background-color: #fff!important;
+  border-left: 5px solid #0093c9!important;
+  margin-right: -18px;
+  padding: 10px 10px 10px 20px!important;
+  margin-left: 15px !important;
+  cursor: default!important;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
-
 
 .manual-toc .active-trail > li > a:hover {
   background-color: #EEF2F3 !important;
@@ -3535,8 +3539,8 @@ div.col-md-3.manual-guide-toc {
 
 
 }
-.manual-toc .active-trail > li > a:hover {
-  background-color: #EEF2F3 !important;
+.manual-guide-toc .active-trail > li > a:hover {
+  background-color: #FFF !important;
 
 }
 .manual-toc .active-trail {
@@ -3595,15 +3599,12 @@ div.col-md-3.manual-guide-toc {
 }
 .guide-doc-body {
 padding-left:30px;
-border-left: solid 2px #eef2f3;
 
 }
 .manual-toc {
-  background: #fff;
   padding:0px;
 }
 .manual-guide-toc {
-  background: #fff;
   padding:0px;
 }
 
@@ -4650,10 +4651,17 @@ a.topic-info-link {
     max-width:100%;
   }
   div.col-md-3.manual-guide-toc {
+    background-color: #fff;
+    display: block;
     position: relative;
-    margin-bottom: 0px;
     top: 0px;
-    margin-right: 15px;
+    border-right: none;
+}
+  .manual-guide-toc-well {
+    display: block;
+  }
+  .manual-guide-toc .active-trail {
+    background-color: #f5f5f5!important;
   }
 }
 @media (max-width: 400px) {
@@ -5277,4 +5285,21 @@ div.navsearch-container {
 .row-fluid {
   margin-left: -15px;
   margin-right:-15px;
+}
+@media (max-width: 995px){
+  div.col-md-3.manual-guide-toc {
+    width: 100% !important;
+  }
+  div.col-md-9 {
+    width: 100% !important;
+  }
+  .manual-guide-toc .active-trail {
+    margin-right: 0px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+  }
+  ul.manual-guide-toc > li > a:hover {
+      margin-right: 0px;
+  }
 }
