--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -800,11 +800,11 @@ code.command::before {
   content: &rsaquo;
 }
 
-#dropmenu .active-trail {
+#dropmenu . {
   color: #efd01b !important;
   box-shadow: none !important;
 }
-#dropmenu .active-trail:hover {
+#dropmenu .:hover {
 
   box-shadow: inset 0 -2px 0 #EFD01B;
 }
@@ -813,10 +813,10 @@ a.cta:hover {
   background-color: #fff !important;
   border: 2px solid #000;
 }
-#navbar .active-trail {
+#navbar . {
   color:#fff;
 }
-.pio-docs-nav .navbar-nav > li > a:hover, .pio-docs-nav .navbar-nav > .active > a, .pio-docs-nav .navbar-nav > .active > a:hover, #navbar .active-trail:hover {
+.pio-docs-nav .navbar-nav > li > a:hover, .pio-docs-nav .navbar-nav > .active > a, .pio-docs-nav .navbar-nav > .active > a:hover, #navbar .:hover {
   color: #EFD01B;
   box-shadow: inset 0 -4px 0 #EFD01B;
 }
@@ -826,7 +826,7 @@ a.cta.cta-yellow:hover {
   box-shadow: none !important;
 }
 
-#dropmenu .active-trail:hover {
+#dropmenu .:hover {
 
   box-shadow: inset 0 -2px 0 #EFD01B;
 }
@@ -1088,7 +1088,7 @@ span#changelog-rsaquo {
   padding: 15px 20px;
 }
 
-.navbar-fixed-top>.col-md-8>.active-trail {
+.navbar-fixed-top>.col-md-8>. {
   font-weight: 400;
   cursor: not-allowed;
 }
@@ -1830,7 +1830,7 @@ color: #222222;
   padding-left: 18px;
   color: #44525E;
   background-color: #f5f5f5!important;
-  border-right: 5px solid #0093c9;
+  border-right: 5px solid #0a6bb5;
   font-weight: 600;
   cursor: default !important;
   }
@@ -1901,7 +1901,7 @@ li.tocify-item {
   }
 }
 .guide-content-well  {
-   border-bottom: .1em solid #eef2f3;
+   /*border-bottom: .1em solid #eef2f3;*/
 }
 .doc-content-well {
   padding-bottom:50px;
@@ -3515,9 +3515,9 @@ div.manual-guide-toc.active-trail li > a:hover {
 }
 .manual-guide-toc .active-trail {
   font-weight: bold;
-  color: #0093c9;
+  color: #0a6bb5;
   background-color: #fff!important;
-  border-left: 5px solid #0093c9!important;
+  border-left: 5px solid #0a6bb5!important;
   margin-right: -18px;
   padding: 10px 10px 10px 20px!important;
   margin-left: 15px !important;
@@ -3648,7 +3648,7 @@ li.terminus-usage {
   text-decoration: none;
 }
 .pager-guides > li > a {
-  background-color: #0093c9!important;
+  background-color: #0a6bb5!important;
   color: #fff!important;
   font-weight: bold!important;
   border: none!important;
@@ -5360,8 +5360,22 @@ blockquote.block-info {
   border-left-color: #5bc0de;
   border-left-width: 5px;
   border-radius: 4px;
-
+  font-family: Avenir;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
-.block-info h3 {
+.block-info h3, .block-success h3 {
     margin-top: 0;
+}
+.text-success {
+  color: #5cb85c;
+}
+blockquote.block-success {
+  border: 1px solid #ddd;
+  border-left-color: #5cb85c;
+  border-left-width: 5px;
+  border-radius: 4px;
+  font-family: Avenir;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
