--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5556,6 +5556,12 @@ width: 100% !important;
   .pio-docs-sidebar {
     right: 0px;
   }
+.upstreams-regular {
+  content: url('/docs/assets/images/upstreams-regular.svg');
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.4; vertical-align: top; margin-right: 2px; margin-left: 3px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
 }
 .secure {
   color: #0b8043 !important;
