tweak dropdwon for algolia results

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5387,6 +5387,8 @@ width: 100% !important;
 }
 .algolia-autocomplete {
   display: block !important;
+  left: 0px !important;
+
 }
 .algolia-autocomplete .algolia-docsearch-suggestion--highlight{
   background-color: #EFD01B!important;
