1st pass align homepage containers with other flexbox usage

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -4600,8 +4600,9 @@ a.cta.cta-black-on-yellow:after:hover {
   margin:0;
 }
 a.topic-info-link {
-  display:inline-block;
+  display: inline-block;
   width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 1200px) {
@@ -4667,7 +4668,7 @@ a.topic-info-link {
   padding-left: 0;
 }
 .topic-info__title {
-  font-family: Avenir-Heavy;
+  font-family: Avenir-Light;
   font-size: 20px;
   color: #0093c9;
   line-height: 25px;
@@ -4776,13 +4777,43 @@ a:focus {
   font-family: Avenir-Light;
   font-size: 22px;
 }
+.guide-cta__text {
+  flex-basis: inherit;
+  flex:4;
+  padding:0px!important;
+  border-radius:0px 4px 4px 0px;
+  align-self: center;
+}
+.guide-cta__text_inner {
+  padding: 25px !important;
+  margin-top: -30px;
+}
+.guide-cta-feature-image {
+  padding: 0px;
+}
+.home-guide-cta-feature-image > img {
+  padding: 30px 0px 0px 10px;
+  margin: 0px;
+  border-radius:4px 0px 0px 4px;
+}
+.guide-cta-feature-image > img {
+  padding: 0px;
+  margin: 0px;
+  border-radius:4px 0px 0px 4px;
+}
 .guide-cta-landing {
-  background-color: #0093c9;
   padding: 30px;
+  display:flex;
+  padding:0px;
+  border: 1px solid #B5C0C3;
+  border-radius: 4px;
+  color:#333;
 }
 .guide-cta-landing:hover {
-box-shadow: 0px 0px 11px 0px rgba(120,134,142,0.62);
-opacity: 0.9;
+  background: #FFFFFF;
+  border: 1px solid #A4BBC1;
+  box-shadow: 0px 0px 11px;
+  border-radius: 5px;
 }
 
 .subtopic-groups > h3 {
@@ -4816,26 +4847,23 @@ opacity: 0.9;
 .hero-video__guide-cta-title {
   font-family: Avenir-Light;
   font-size: 32px;
-  color: #fff;
   line-height: 43px;
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  color: #0093c9;
 
 }
 .hero-video__guide-cta-subtitle {
   font-family: AvenirLT-Medium;
-  color: #fff !important;
   line-height: 20px;
-  margin-bottom: 35px;
+  margin-bottom: 0px;
 
 }
 .hero-video__guide-cta-subtitle > a {
-  color: #fff;
 }
 #guide-cta > a:hover {
   text-decoration:none;
   opacity: 0.65;
-  color:#fff !important;
 
 }
 .hero-video__subtitle {
@@ -5302,6 +5330,7 @@ div.navsearch-container {
 .flex-panel-item {
   flex: 1 30%;
   margin: 0px 0px 15px 15px;
+  color: #333;
 }
 .flex-panel-body {
   justify-content: space-between;
@@ -5347,9 +5376,23 @@ div.navsearch-container {
   align-self: center;
   text-align: center;
 }
+.flex-panel-item-home {
+  flex: 1 1 0%;
+  margin: 0px 0px 15px 15px;
+  border: 1px solid #B5C0C3;
+  border-radius: 4px;
+  color: #333;
+}
+.flex-panel-item-home:hover {
+    background: #FFFFFF;
+    border: 1px solid #A4BBC1;
+    box-shadow: 0px 0px 11px;
+    border-radius: 4px;
+}
 .flex-panel-item-platform-integrations {
   flex: 1 1 0%;
   margin: 0px 0px 15px 15px;
+  color: #333;
 }
 .flex-panel-item-platform-integrations>a:hover {
   text-decoration: none!important;
@@ -5371,14 +5414,20 @@ div.navsearch-container {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+.flex-panel-body-home {
+  text-align: center;
+  border-radius: 4px;
+  padding: 10px;
+  display:flex;
+}
 .flex-panel-body-pantheon-workflows {
   text-align: center;
   background-color: #fff;
   border-radius: 4px;
 }
 .pantheon-workflows {
-  border: 1px solid #e8e8e8;
-  padding: 10px;
+  border: 1px solid #B5C0C3;
+  padding: 20px;
   border-radius:4px;
 }
 .pantheon-workflows>h3 {
