--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5393,6 +5393,7 @@ div.navsearch-container {
   flex: 1 1 0%;
   margin: 0px 0px 15px 15px;
   color: #333;
+  min-width: 350px;
 }
 .flex-panel-item-platform-integrations>a:hover {
   text-decoration: none!important;
