--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -4816,12 +4816,16 @@ a:focus {
   border: 1px solid #B5C0C3;
   border-radius: 4px;
   color:#333;
+  padding:25px!important;
+  display:block;
+  background-color: #0093c9;
+}
+.guide-cta-landing>h1, .guide-cta-landing>p {
+  color:#fff!important;
 }
 .guide-cta-landing:hover {
-  background: #FFFFFF;
-  border: 1px solid #A4BBC1;
-  box-shadow: 0px 0px 11px;
-  border-radius: 5px;
+  box-shadow: 0px 0px 11px 0px rgba(120,134,142,0.62);
+  opacity: 0.9;
 }
 
 .subtopic-groups > h3 {
