Set WP_HOME constant in redirect snippet for WordPress

--- a/source/_partials/redirects.twig
+++ b/source/_partials/redirects.twig
@@ -21,6 +21,7 @@
   endif;
   $base_url = 'https://'. $primary_domain;
   define('WP_SITEURL', $base_url);
+  define('WP_HOME', $base_url);
   if ($_SERVER['HTTP_HOST'] != $primary_domain
       || !isset($_SERVER['HTTP_X_SSL'])
       || $_SERVER['HTTP_X_SSL'] != 'ON' ) {
