--- a/source/_partials/redirects.twig
+++ b/source/_partials/redirects.twig
@@ -86,7 +86,7 @@
       || !isset($_SERVER['HTTP_X_SSL'])
       || $_SERVER['HTTP_X_SSL'] != 'ON' ) {
 
-    # Name transaction "redirect" in New Relic for improved reporting (optoinal)
+    # Name transaction "redirect" in New Relic for improved reporting (optional)
     if (extension_loaded('newrelic')) {
       newrelic_name_transaction("redirect");
     }
