Refactor intro page, add commands for setup

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -326,12 +326,14 @@ ul {
   line-height: 29px;
 }
 p{
-  margin: 0 0 20px;
+  margin: 0 0 10px;
   color:#44525E;
   font-size: 18px;
   line-height: 29px;
 }
-
+li>p {
+  margin: 0px;
+}
 .instruction {  /*smaller margin-bottom on paragraphs preceeding code snippets*/
   margin-bottom: 5px;
 }
