remove WP_SITEURL and WP_HOME due to warnings
Also removed $base_url as it is only used once and can be refactored.

--- a/source/_partials/redirects.twig
+++ b/source/_partials/redirects.twig
@@ -11,7 +11,7 @@
 <div role="tabpanel" class="tab-pane active" id="wp">
 <p markdown="1">Add the following to <code>wp-config.php</code> (replace <code>www.example.com</code>):</p>
 <pre id="git-pull-wp"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
-  // Redirect to https://$primary_domain/ in the Live environment
+  // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
     $primary_domain = 'www.example.com';
@@ -20,9 +20,7 @@
     // Redirect to HTTPS on every Pantheon environment.
     $primary_domain = $_SERVER['HTTP_HOST'];
   }
-  $base_url = 'https://'. $primary_domain;
-  define('WP_SITEURL', $base_url);
-  define('WP_HOME', $base_url);
+
   if ($_SERVER['HTTP_HOST'] != $primary_domain
       || !isset($_SERVER['HTTP_X_SSL'])
       || $_SERVER['HTTP_X_SSL'] != 'ON' ) {
@@ -33,7 +31,7 @@
     }
 
     header('HTTP/1.0 301 Moved Permanently');
-    header('Location: '. $base_url . $_SERVER['REQUEST_URI']);
+    header('Location: https://'. $primary_domain . $_SERVER['REQUEST_URI']);
     exit();
   }
 }</code></pre>
@@ -41,7 +39,7 @@
 <div role="tabpanel" class="tab-pane" id="d8">
 <p markdown="1">Add the following to the end of your <code>settings.php</code> file (replace <code>www.example.com</code>):</p>
 <pre id="git-pull-drops-8"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
-  // Redirect to https://$primary_domain/ in the Live environment
+  // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
     $primary_domain = 'www.example.com';
@@ -50,6 +48,7 @@
     // Redirect to HTTPS on every Pantheon environment.
     $primary_domain = $_SERVER['HTTP_HOST'];
   }
+
   if ($_SERVER['HTTP_HOST'] != $primary_domain
       || !isset($_SERVER['HTTP_X_SSL'])
       || $_SERVER['HTTP_X_SSL'] != 'ON' ) {
@@ -60,7 +59,7 @@
     }
 
     header('HTTP/1.0 301 Moved Permanently');
-    header('Location: '. 'https://'. $primary_domain . $_SERVER['REQUEST_URI']);
+    header('Location: https://'. $primary_domain . $_SERVER['REQUEST_URI']);
     exit();
   }
   // Drupal 8 Trusted Host Settings
@@ -72,7 +71,7 @@
 <div role="tabpanel" class="tab-pane" id="d7">
 <p markdown="1">Add the following to the end of your <code>settings.php</code> file (replace <code>www.example.com</code>):</p>
 <pre id="git-pull-drops-7"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
-  // Redirect to https://$primary_domain/ in the Live environment
+  // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
     $primary_domain = 'www.example.com';
@@ -92,7 +91,7 @@
     }
 
     header('HTTP/1.0 301 Moved Permanently');
-    header('Location: '. $base_url . $_SERVER['REQUEST_URI']);
+    header('Location: https://'. $primary_domain . $_SERVER['REQUEST_URI']);
     exit();
   }
 }</code></pre>
