--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -263,6 +263,7 @@ p, h1, h2, h3, h4, h5, h6, a, ol, ul {
   border-top: 1px solid #ccc;
   background-color: #f5f5f5;
   padding: 15px;
+  margin-bottom: 20px;
 }
 .article a {
   text-decoration: underline;
