audit up to page 7

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -743,6 +743,9 @@ pre code {
 code.command::before {
     content: "$ ";
 }
+code.sftp-command::before {
+    content: "sftp> ";
+}
 
 /* Keep code small in tables on account of limited space */
 .table code {
