--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5650,3 +5650,41 @@ a:focus, a:hover {
   border-radius: 50%;
   padding: 1px 4px;
 }
+pre {
+    overflow-x: auto;
+    white-space: pre;
+}
+pre code {
+    white-space: inherit;
+}
+.style-example {
+  border: solid 2px #e5e5e5;
+  position: relative;
+  padding: 45px 15px 15px;
+  margin-bottom: 20px;
+}
+.style-example::after {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #959595;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    content: "Example";
+}
+hr.source-code {
+  margin-bottom:40px;
+  position: relative;
+}
+hr.source-code::after {
+    position: absolute;
+    font-size: 12px;
+    font-weight: 700;
+    color: #959595;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    content: "Source";
+    margin-top: 10px;
+}
