First bit of copy edits / images

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5688,3 +5688,11 @@ hr.source-code::after {
     content: "Source";
     margin-top: 10px;
 }
+.no-border {
+  border: none!important;
+}
+.pop-desc {
+  font-size: smaller;
+  color: gray;
+  margin-top:-30px;
+}
