--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5462,7 +5462,7 @@ div.navsearch-container {
   color: #333;
 }
 .flex-panel-item-guides-landing {
-  flex: 1;
+  flex: 1 48%;
   margin: 0px 0px 15px 15px;
   color: #333;
 }
