Switch pantheon check in $_SERVER to $_ENV
For consistency with other PANTHEON_ENVIRONMENT checks in this code and elsewhere

--- a/source/_partials/redirects.twig
+++ b/source/_partials/redirects.twig
@@ -10,7 +10,7 @@
 <div class="tab-content">
 <div role="tabpanel" class="tab-pane active" id="wp">
 <p markdown="1">Add the following to <code>wp-config.php</code> (replace <code>www.example.com</code>):</p>
-<pre id="git-pull-wp"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
+<pre id="git-pull-wp"><code class="php hljs" data-lang="hljs">if (isset($_ENV['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
   // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
@@ -38,7 +38,7 @@
 </div>
 <div role="tabpanel" class="tab-pane" id="d8">
 <p markdown="1">Add the following to the end of your <code>settings.php</code> file (replace <code>www.example.com</code>):</p>
-<pre id="git-pull-drops-8"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
+<pre id="git-pull-drops-8"><code class="php hljs" data-lang="hljs">if (isset($_ENV['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
   // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
@@ -70,7 +70,7 @@
 </div>
 <div role="tabpanel" class="tab-pane" id="d7">
 <p markdown="1">Add the following to the end of your <code>settings.php</code> file (replace <code>www.example.com</code>):</p>
-<pre id="git-pull-drops-7"><code class="php hljs" data-lang="hljs">if (isset($_SERVER['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
+<pre id="git-pull-drops-7"><code class="php hljs" data-lang="hljs">if (isset($_ENV['PANTHEON_ENVIRONMENT']) && php_sapi_name() != 'cli') {
   // Redirect to https://$primary_domain in the Live environment
   if ($_ENV['PANTHEON_ENVIRONMENT'] === 'live') {
     /** Replace www.example.com with your registered domain name */
