Copy edits:  - Move "Roles & Permissions" from h2 to h3 within "Before You Begin"  - Adjust CSS and replace h3s used in panels so they don't break TOC hierarchy  - Warn against changing DNS as prompted in the Site Dashboard  - Remove language instructing user to remove/configure all domains at once  - Insert new step that instructs repeating relevant steps for impacted domains

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2223,6 +2223,14 @@ h3.panel-drop-title {
   font-size: 14px;
   line-height: 1;
 }
+h4.panel-drop-title {
+  text-decoration: none;
+  color: #000 !important;
+  font-weight: 700;
+  font-family: 'TabletGothic';
+  font-size: 14px;
+  line-height: 1;
+}
 a.panel-drop-title {
   text-decoration: none;
   cursor: pointer;
