--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1800,9 +1800,9 @@ margin-right: 20px;
 @media (max-width: 1200px) {
 .container {
 }
+}
  /* Widen the fixed sidebar */
   .pio-docs-sidebar.affix,
-}
   .pio-docs-sidebar.affix-bottom {
 
   }
@@ -5250,8 +5250,6 @@ div.navsearch-container {
   margin: 0px !important;
   border-radius:4px;
   max-height: 70px;
-  border: none !important;
-  padding: unset !important;
 }
 .pantheon-official {
   color: #78868e;
@@ -5575,8 +5573,6 @@ td{
 #navbar .create-account a:hover {
   color: #000 !important;
 }
-#doc img, .changelog-wrapper img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 10px;
+.img{
+    border: 1px solid #44515e;
 }
