Replace Adelle-Italic w/TabletGothic, use H4 color for page descriptions

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -216,9 +216,9 @@ hr {
   text-align: ;
 }
 .article-subhead {
-  font-family: 'Adelle-Italic';
+  font-family: 'TabletGothic';
   font-size: 25px;
-  color: #44525E;
+  color: #8f9192;
   line-height: 24px;
   letter-spacing: -0.2px;
   line-height: 1.5em;
